# aethen-ai

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  EVALUATION.md  LICENSE  PROJECT_STRUCTURE.md  README.md  ROADMAP.md  SECURITY.md  TESTING.md  fix_empty_states.py  fix_empty_states_2.py  fix_end.py  fix_layout.py  fix_layout_compact.py  fix_loading_empty.py  fix_memory_debug.py  fix_overlays.py  fix_syntax.py  fix_tool_misfire.py  fix_traces.py  fix_traces_layout.py  refactor_pages.py  render.yaml  sync_traces.py  update_layout.py  update_layout_simple.py  update_memory_debug.py  update_pages.py  update_traces.py  update_ui.py  vercel.json
backend/: .env.example  Dockerfile  pyproject.toml  render.yaml  requirements.txt
backend/app/: config.py  main.py  store.py
backend/app/agents/: graph.py  llm.py  state.py
backend/app/api/: admin.py  analyze_raw.py  api_key.py  backfill.py  (+20 more)
backend/data/: eval_dataset.json
backend/scripts/: clear_langfuse.py  demo_agent.py  generate_adversarial_traces.py  generate_eval_dataset.py  generate_traces.py  migrate_auth_schema.py  migrate_profile_update_policies.py  migrate_to_pgvector.py  reset_and_reseed.py  run_eval.py  run_mcp.py  seed_neo4j.py  seed_pinecone.py  sync_neo4j_from_postgres.py  verify_pgvector.py
backend/tests/: conftest.py  test_api_langsmith.py  test_api_sessions.py  test_api_stats.py  test_chat.py  test_chat_sessions.py  test_confidence_scorer.py  test_eval_api.py  test_eval_pipeline.py  test_freeform_intents.py  test_health.py  test_ingest.py  test_integration.py  test_langfuse_adapter_extended.py  test_langsmith_provider.py  test_mcp_tools.py  test_new_features.py  test_pii_redactor.py  test_qc_helpers.py  test_rerank.py  test_sources_api.py  test_utils.py
sdk/: pyproject.toml
sdk/aethen_sdk/: __init__.py  client.py
(+252 files in other folders)
